external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_lambda_fail.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/spec_parsing_lambda_fail.move:3:15
  │
3 │       let _ = |y| x + y;
  │               ^^^^^^^^^ 'macro' functions are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

